:bug: overflow-x: hidden for a better experience

--- a/docs/assets/featherweight.css
+++ b/docs/assets/featherweight.css
@@ -36,6 +36,11 @@ body {
   width: 90%;
 }
 
+html {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 footer {
   position: fixed;
   font-size: smaller;
